Update DevContainer benefits and opportunities for collaboration

--- a/talks/devcontainers@gematik/index.html
+++ b/talks/devcontainers@gematik/index.html
@@ -192,6 +192,9 @@
                         <td>Erleichtert die Kooperation bei Spezifikationen, Tools und POCs, minimiert Konfigurationshürden</td>
                     </tr>
                 </table>
+                <div style="font-size:0.75em; margin-top:0px; flex: 1; margin-left: 20px;">
+                    <p class="fragment">=> DevContainer ermöglichen eine erweiterte Nutzerbasis und reduzieren technische Hürden im Vergleich zur DevBox. Dies fördert die Kooperation und Effizienz.</p>
+                </div>
             </section>
 
             <section>
@@ -247,7 +250,7 @@
                     <ul>
                         <li>Die Herausforderungen mit der aktuellen DevBox zeigen die Notwendigkeit für eine vereinheitlichte, nutzerfreundliche Lösung.</li>
                         <li>DevContainer bieten eine zukunftsorientierte Entwicklungsumgebung, die Effizienz und Produktivität steigert.</li>
-                        <li>Wir stehen vor der Gelegenheit, unsere technologische Landschaft zu modernisieren und unsere Teamdynamik zu verbessern.</li>
+                        <li>Wir stehen vor der Gelegenheit, unsere technologische Landschaft zu modernisieren und unsere Kooperationsmöglichkeiten zu verbessern.</li>
                     </ul>
                     <p>Ich lade alle Entscheidungsträger ein, sich dieser innovativen Veränderung anzuschließen und sie aktiv zu unterstützen.</p>
                 </div>
