Update POC and Fazit to Ergebnis

--- a/talks/devcontainers@gematik/index.html
+++ b/talks/devcontainers@gematik/index.html
@@ -229,7 +229,7 @@
                             <li>VSCode-Extensions zur Konfiguration der Entwicklungsumgebung</li>
                             <li>Automatisches Einrichten der Datenbank und Starten der Dienste</li>
                         </ul>
-                        <p><b>Fazit:</b> POC kann von jedem Entwickler mit einem Klick gestartet werden, was eine hohe Effizienz und Benutzerfreundlichkeit gewährleistet.</p>
+                        <p><b>Ergebnis:</b> POC kann von jedem Entwickler mit einem Klick gestartet werden, was eine hohe Effizienz und Benutzerfreundlichkeit gewährleistet.</p>
                     </div>
                     <div style="flex: 1;">
                         <a href="https://github.com/gematik/spec-epa-medication">Spezifikation: ePA FHIR Profile</a>
@@ -238,7 +238,7 @@
                             <li>Einheitliche Einrichtung der FHIR-Validierungspipeline in "Ready to Run"-Zustand:</li>
                             <li>Konsistente Konfiguration und Versionierung der Tools</li>
                         </ul>
-                        <p><b>Fazit:</b> Enorme Zeiteinsparung und vereinfachte Kooperation durch standardisierte und vorbereitete Entwicklungs-Tools.</p>
+                        <p><b>Ergebnis:</b> Enorme Zeiteinsparung und vereinfachte Kooperation durch standardisierte und vorbereitete Entwicklungs-Tools.</p>
                     </div>
                 </div>
             </section>
