added inital slides

--- a/talks/_template/index.html
+++ b/talks/_template/index.html
@@ -41,7 +41,7 @@
 
                 <img src="potrait_robert.png" alt="Photo of Robert smiling" style="float:right; height:400px;">
                 <p>Lead Architekt for the electronic prescription at gematik</p>
-                <p>Formerly: Senior Develeoper</p>
+                <p>Formerly: Senior Developer</p>
                 <br>
                 <p>Find me online at:</p>
                 <table style="width:40%; float: left; font-size:28px;">
